# Computer-and-Peripherals

./: README.md
lab1/: CMakeLists.txt  main.c
lab3/: listing_x86-64_O0.s  listing_x86-64_O2.s  listing_x86_O0.s  listing_x86_O2.s
lab4/: CMakeLists.txt  listing_arm_O0.s  listing_arm_O2.s
lab5/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt  main.cpp
lab7/: AVX_vectorization.cpp  BLAS_vectorization.cpp  CMakeLists.txt  MatrixBLAS.cpp  SSE2_vectorization.cpp  disable_vectorization.cpp
lab7/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h
lab7/MatrixDefault/: MatrixDEFAULT.cpp
lab7_avx/: AVX_vectorization.cpp  CMakeLists.txt
lab7_avx/MatrixAVX/: CMakeLists.txt  Matrix.cpp  Matrix.h
lab7_blas/: BLAS_vectorization.cpp  CMakeLists.txt  MatrixBLAS.cpp  MatrixBLAS.h
lab7_default/: CMakeLists.txt  MatrixBLAS.cpp  SSE2_vectorization.cpp  disable_vectorization.cpp
lab7_default/MatrixDefault/: CMakeLists.txt  MatrixDEFAULT.cpp  MatrixDEFAULT.h
lab7_sse2/: CMakeLists.txt  SSE2_vectorization.cpp
lab7_sse2/MatrixSSE2/: CMakeLists.txt  Matrix.h
lab8/: CMakeLists.txt  main.cpp
lab9/: CMakeLists.txt  main.cpp
